# AInewsLetter

./: .gitignore  Backend_Development_Plan.md  Frontend_Development_Plan.md  NewsRequirements最初群里的版本.md  README.md  arXiv爬虫存储架构参考文档.md  快速集成指南.md  爬虫项目开发方案模板.md  知名机构.md
X/: openai_latest_tweet.md  openai_latest_tweet_with_images.md  scrape_elon_tweets.js  scrape_openai_tweet_with_images.js
academic_papers/acl_anthology/: README.md
academic_papers/arxiv/: README.md  README_ENHANCED.md  USAGE_GUIDE.md  batch_crawl_categories.py  category_crawler.py  check_data.py  clean_minio_bucket.py  create_test_data.py  main.py  main_enhanced.py  main_enhanced_simple.py  requirements.txt  test_enhanced_features.py  test_markdown_conversion.py  test_oss_uploader.py  test_paper_1.md  test_paper_2.md  test_paper_3.md  test_single_folder_upload.py  upload_arxiv_articles.py  upload_folder_structure.py  upload_paper_folders.py  upload_paper_folders_fixed.py  upload_to_minio_es.py
academic_papers/conference_papers/: README.md
academic_papers/semantic_scholar/: README.md  conservative_test.py  requirements.txt  run_crawler.py  simple_test.py  spider.py  test_api.py
ai_news/: analyze_and_create_folders.py  链接列表.html
ai_news/AI_Research_Blog/: README.md
ai_news/AMD_AI_Blog/: README.md
ai_news/AWS_AI_Blog/: README.md
ai_news/Cerebras/: README.md
ai_news/CharacterAI/: README.md
ai_news/Chroma/: README.md
ai_news/Claude_newsroom/: README.md  README_old.md  requirements.txt  run_crawler.py  spider.py  uploader.py
ai_news/Cohere/: README.md
ai_news/nlpSp1der/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Elasticsearch设计文档.md  Makefile  OSS_UPLOAD_DESIGN.md  OSS上传设计和使用方式.md  OSS使用说明.md  README.md  main.py  pyproject.toml  requirements.txt  run_anti_detect.py  setup.py  使用说明.md  数据存储架构文档.md
ai_news/nlpSp1der/scripts/: protect_flows_check.py
ai_news/nlpSp1der/src/: __init__.py
ai_news/nlpSp1der/src/newsletter_system/: __init__.py
ai_news/nlpSp1der/src/newsletter_system/crawler/: __init__.py  anti_detect_crawler.py  newsletter_crawler.py
ai_news/nlpSp1der/src/newsletter_system/elasticsearch/: __init__.py
ai_news/nlpSp1der/src/newsletter_system/oss/: __init__.py  oss_uploader.py  wrapper.py
ai_news/nlpSp1der/src/newsletter_system/utils/: __init__.py  file_utils.py  logger.py
ai_news/nlpSp1der/src/scripts/: __init__.py  run.py
ai_news/nlpSp1der/src/tests/: __init__.py  benchmark_crawlers.py
m1n10C0nnect0r/: .env.example  .gitignore  CLAUDE.md  PROJECT_SNAPSHOT.md  ai-newsletters.html  backup_project.sh
shared/: quality_scorer.py  utils.py
spider/: README.md  main.py  requirements.txt  开发文档.md  快速集成指南.md  爬虫存储架构参考文档.md
(+190 files in other folders)
